# alt-text

./: README.md  pyproject.toml  requirements-dev.txt  requirements-extras.txt  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: pre-commit.yml  pytest.yml
alt_text/: __init__.py  core.py  model.py
app/: app.py  backend.py  processor.py
